vlib/v/scanner/tests/empty_character_literal_err.vv
fn main() {
	a := ``
	println(a)
}
